Replace several comparators via ComparatorCombinatorsInspection